force-app/main/default/objects/NCMT_DES_Lookup_details__c/NCMT_DES_Lookup_details__c.object-meta.xml
<CustomObject>
    <label>NCMT DES Lookup Detail</label>
    <nameField>
        <label>Surrogate Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NCMT DES Lookup Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>