force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <defaultValue>&quot;Shell&quot;</defaultValue>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shell</fullName>
                <default>true</default>
                <label>Shell</label>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>