force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Crew_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Crew_Master_Name__c</fullName>
    <formula>NCMT_Crew_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crew Master Name</label>
    <type>Text</type>
</CustomField>