force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Daily_Output__c.field-meta.xml
<CustomField>
    <fullName>Daily_Output__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Output</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>