force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Difficulty_Factor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Difficulty_Factor_Percent__c</fullName>
    <defaultValue>000.00</defaultValue>
    <label>Difficulty Factor %</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>