force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Equipment_Unit_O_P_Cost__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Unit_O_P_Cost__c</fullName>
    <label>Equipment Unit O&amp;P Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>