force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Hourly_Rate_txt__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Rate_txt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Labor Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>