force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/In_house_Unit_Total__c.field-meta.xml
<CustomField>
    <fullName>In_house_Unit_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>In-house Unit Total</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>