force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/ItemDesc__c.field-meta.xml
<CustomField>
    <fullName>ItemDesc__c</fullName>
    <formula>Line_Item_Number__c + &apos; - &apos; +  Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ItemDesc</label>
    <type>Text</type>
</CustomField>