force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Labor_Hours_txt__c.field-meta.xml
<CustomField>
    <fullName>Labor_Hours_txt__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Labor Hours</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>