force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Level_2__c.field-meta.xml
<CustomField>
    <fullName>Level_2__c</fullName>
    <label>Level 2</label>
    <referenceTo>NCMT_Cost_Category__c</referenceTo>
    <relationshipLabel>NCMT DES Lookup Details</relationshipLabel>
    <relationshipName>DES_Lookup_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>