force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Level_2_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_2_Description__c</fullName>
    <formula>Level_2__r.Category_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level 2 Description</label>
    <type>Text</type>
</CustomField>