force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Level_3_Description__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Description__c</fullName>
    <label>Level 3 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>