force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Level_5_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Level_5_Line_Item__c</fullName>
    <label>Level 5 Line Item</label>
    <length>50</length>
    <type>Text</type>
</CustomField>