force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Line_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Number__c</fullName>
    <label>CSI Line Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>