force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Lvl2Desc__c.field-meta.xml
<CustomField>
    <fullName>Lvl2Desc__c</fullName>
    <formula>Level_2__r.CatDesc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lvl2Desc</label>
    <type>Text</type>
</CustomField>