force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Lvl3Desc__c.field-meta.xml
<CustomField>
    <fullName>Lvl3Desc__c</fullName>
    <formula>Level_3_Line_Item__c + &apos;-&apos; +  Level_3_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lvl3Desc</label>
    <type>Text</type>
</CustomField>