force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/NCMT_Contractor_ID__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Contractor_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT SubContractor ID</label>
    <referenceTo>NCMT_Contractor__c</referenceTo>
    <relationshipLabel>NCMT DES Lookup Details</relationshipLabel>
    <relationshipName>NCMT_DES_Lookup_Details</relationshipName>
    <type>Lookup</type>
</CustomField>