force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/NCMT_Crew_Master__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Crew_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Crew Master</label>
    <referenceTo>NCMT_Crew_Master__c</referenceTo>
    <relationshipName>NCMT_DES_Lookup_Details</relationshipName>
    <type>Lookup</type>
</CustomField>