force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/NCMT_Labor__c.field-meta.xml
<CustomField>
    <fullName>NCMT_Labor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCMT Labor</label>
    <referenceTo>NCMT_Labor_Resource__c</referenceTo>
    <relationshipLabel>NCMT DES Lookup Details</relationshipLabel>
    <relationshipName>NCMT_DES_Lookup_Details</relationshipName>
    <type>Lookup</type>
</CustomField>