force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/OP_Code__c.field-meta.xml
<CustomField>
    <fullName>OP_Code__c</fullName>
    <label>OP Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FCC</fullName>
                <default>true</default>
                <label>FCC</label>
            </value>
            <value>
                <fullName>FMC</fullName>
            </value>
            <value>
                <fullName>FAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>