force-app/main/default/objects/NCMT_DES_Lookup_details__c/fields/Waste_Factor__c.field-meta.xml
<CustomField>
    <fullName>Waste_Factor__c</fullName>
    <defaultValue>000.00</defaultValue>
    <label>Waste Factor</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>