force-app/main/default/objects/NCMT_DES_Lookup_details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Level_2__c</columns>
    <columns>Description__c</columns>
    <columns>NCMT_Crew_Master__c</columns>
    <columns>Daily_Output__c</columns>
    <columns>Difficulty_Factor_Percent__c</columns>
    <columns>Crew_Quantity__c</columns>
    <columns>Equipment_Unit_Cost__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Level_3_Line_Item__c</columns>
    <columns>Level_4_Line_Item__c</columns>
    <columns>Level_5_Line_Item__c</columns>
    <columns>Line_Item_Number__c</columns>
    <columns>OP_Code__c</columns>
    <columns>File_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>