force-app/main/default/objects/NCMT_DES_Lookup_details__c/listViews/FY_2020.listView-meta.xml
<ListView>
    <fullName>FY_2020</fullName>
    <columns>NAME</columns>
    <columns>Level_2__c</columns>
    <columns>Level_2_Description__c</columns>
    <columns>Level_3_Line_Item__c</columns>
    <columns>Level_3_Description__c</columns>
    <columns>Level_4_Line_Item__c</columns>
    <columns>Level_4_Description__c</columns>
    <columns>Level_5_Line_Item__c</columns>
    <columns>Level_5_Description__c</columns>
    <columns>Line_Item_Number__c</columns>
    <columns>Description__c</columns>
    <columns>Hourly_Rate_txt__c</columns>
    <columns>Equipment_Unit_Cost__c</columns>
    <columns>Material_Unit_Cost__c</columns>
    <columns>Unit__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>2020</value>
    </filters>
    <label>FY-2020</label>
</ListView>